<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ventana_login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/ic_index_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="#F2FAB941"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edit_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="9"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="9"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:ems="9"
                    android:hint="@string/clave"
                    android:inputType="textPassword"
                    android:padding="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:ems="9"
                    android:text="@string/olvide"
                    android:textColor="@color/purple_700"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="50dp"
                    android:layout_weight="9"
                    android:onClick="boton_registrar"
                    android:text="@string/registrase" />

                <ImageButton
                    android:id="@+id/imageButtonIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/ingresar"
                    app:srcCompat="@drawable/play2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

